--- a/main.org
+++ b/main.org
@@ -1,142 +1,179 @@
 #+OPTIONS: author:nil
 #+OPTIONS: toc:nil
-#+TITLE: to be defined
+#+title: \emph{Integrating Deep Learning in Expert Systems\\ for Medical Diagnosis}
 #+DATE:
 #+LaTeX_CLASS: article
+#+LaTeX_CLASS_OPTIONS: [french]
+#+LANGUAGE:  fr
+#+LaTeX_HEADER: \usepackage{babel}
 #+LATEX_HEADER: \usepackage{minted}
 
 * Context
-  Le début du XXIème siècle a vu une augmentation drastique d’applications
-  informatiques apportant une assistance à de nombreuses activités humaines.
-  Parmi celles-ci, le secteur de la médecine. L’utilisation de
-  la technologie appliquée à la santé est devenue un des points d’intérêt de notre société : 
 
-   - L’emploi des robots d'assistances en chirurgie 
-   - La mesure des données physiologiques (taux de sucre dans le sang pour les diabétiques)
-   - Les serious games pour réapprendre à marché
-   - Le dossier médical partagé
+Le début du XXIème siècle a vu une augmentation spectaculaire d’applications
+informatiques apportant une assistance à de nombreuses activités humaines, y
+compris pour le secteur de la médecine. L’utilisation de la technologie
+appliquée à la santé est devenue un des points d’intérêt de notre société, par
+exemple pour l’emploi des robots d’assistances en chirurgie, la mesure des
+données physiologiques comme le taux de sucre dans le sang pour les diabétiques,
+ou le dossier médical partagé.  
 
-   Ces innovations qui parsèment le champ de santé émergent dans un domaine
-   important qui est celui de la gestion de la douleur. 
+L’objectif principal de ce projet de recherche  s’appuie sur la start up Lucine,
+créée pour apporter des solutions innovantes pour les personnes qui, comme sa
+fondatrice, souffrent de douleur chronique, ceci afin d’en diminuer l’impact sur
+la vie quotidienne et d’en assurer une prise en charge optimisée.  L’idée
+consiste à réaliser une application destinée à un usage personnalisé, permettant
+de pouvoir mesurer automatiquement les niveaux de douleur ressentis par les
+détenteurs de l’application envisagée. Cette solution pourra aider les médecins
+à fournir un traitement adapté aux patients concernés.  
 
+La mesure de la douleur n’est pas une tâche facile et constitue depuis longtemps
+un défi, même pour des professionnels de santé avertis. De nombreuses échelles
+et méthodes de mesure ont été créées pour répondre à une telle question
+cite:wong1996wong,mccaffery1999pain,portenoy1996visual,melzack1975mcgill,galer1997development,gracely1988descriptor
+mais leur efficacité reste limitée. Jusqu’à ce jour, il est encore
+difficile d’arriver à une mesure précise de la douleur.  
 
-   L’objectif principal de ce projet de recherche  consiste à pouvoir mesurer
-   les niveaux de douleur. En effet, cette solution va pouvoir aider les
-   médecins à fournir un traitement adapté  aux patients affectés de douleurs
-   chroniques. La mesure de la douleur n’est pas une tâche facile et constitue
-   depuis longtemps un défi, même pour des professionnels de santé avertis. De
-   nombreuses échelles et méthodes de mesure ont été créées pour résoudre une
-   telle question
-   cite:wong1996wong,mccaffery1999pain,portenoy1996visual,melzack1975mcgill,galer1997development,gracely1988descriptor
-   mais leurs efficacités est limitée. Jusqu’à 
-   ce jour, il est encore difficile d’arriver à une mesure précise de la
-   douleur. En réalité, du fait que la douleur est une sensation subjective, la
-   mesure la plus utilisée est l’auto-évaluation par le patient. Même si cette
-   mesure donne
-   des résultats relativement acceptables, elle est encore insuffisante sur certains
-   aspects, notamment quand on en vient à la notion de douleur simulée cite:gwen2007faces, ou,
-   plus couramment, lorsque le patient a des difficultés à communiquer, comme
-   lorsqu’il s’agit d’enfants ou de personnes âgées cite:lucey2011automatically. 
+La raison principale pour cela est que la douleur est une sensation subjective,
+et la mesure la plus utilisée est l’auto-évaluation par le patient. Même si
+cette mesure donne des résultats relativement acceptables, elle est encore
+insuffisante sur certains aspects, notamment quand on en vient à la notion de
+douleur simulée cite:gwen2007faces, ou, plus  couramment, lorsque le patient a
+des difficultés à communiquer, comme  lorsqu’il s’agit d’enfants ou de personnes
+âgées cite:lucey2011automatically.
 
-   La création d’une méthode capable de fournir une mesure précise du niveau de douleur ressentie
-   par le patient pourrait aider le système actuel de diagnostic à dépasser une
-   barrière difficile : la subjectivité de la douleur du patient. 
+La création  d’une méthode capable  de fournir une  mesure précise du  niveau de
+douleur ressentie par le patient pourrait  aider le système actuel de diagnostic
+à dépasser  cette barrière  difficile qu'est  la subjectivité  de la  douleur du
+patient.
 
-** State of the art
-  Jusqu’à maintenant, il y a eu un certain nombre de recherches sérieuses pour
-  essayer d’obtenir un système de détection de la douleur spar l’analyse des
-  données biométriques (pupilles, verbales, vocales, ECG etc.).La reconnaissance
-  faciale est l'un des systèmes qui se révèle le plus prometteur pour mesurer et
-  analyser la douleur d'un patient dans une temporalité rapide.  Afin d’atteindre
-  cet objectif, plusieurs systèmes ont utilisé des collections de données
-  affectées de codes FACS (Facial Action Coding System) cite:lucey2011painful. 
+** État de l’art
+Plusieurs travaux  ont déjà essayé d’obtenir  un système de détection  de la
+douleur par  l’analyse des  données biométriques, telles  ques les  pupilles, la
+voix, l'ECG etc.). La reconnaissance faciale est l'un des systèmes qui se révèle
+le  plus   prometteur  pour  mesurer   et  analyser  la  douleur   d'un  patient
+efficacement.  Afin d’atteindre cet objectif, plusieurs systèmes ont utilisé des
+collections  de données  affectées  de codes  FACS (/Facial Action  Coding System/) cite:lucey2011painful.
 
-  Le principal travail réalisé sur ce sujet a été la recherche menée par
-  l’Université de Pittsburgh "Automatically Detecting Pain in Video Through Facial
-  Action Units" cite:lucey2011automatically. Cette recherche s’est basée principalement sur l’utilisation
-  des FACS pour détecter la douleur sur des images données. Les résultats obtenus
-  ont été élémentaires. Ils ont porté sur la présence ou l’absence de douleur («
-  pain or no pain »). 
+Le  principal  travail  réalisé sur  ce  sujet  a  été  la recherche  menée  par
+l’Université de Pittsburgh "/Automatically  Detecting Pain in Video Through Facial  Action Units/"  cite:lucey2011automatically.
+Cette  recherche s’est basée  principalement sur  l’utilisation des  FACS  pour
+détecter  la douleur  à partir d'images. Les résultats obtenus sont restés
+limités, puisqu'ils ont porté sur la présence ou l’absence de douleur (« pain or
+no pain »). 
 
-  Une autre recherche, menée sur le même sujet, avec le même ensemble de données,
-  est celle qui a été menée à l’Université d’Aalborg Danemark
-  cite:bellantonio2016spatio. Cette recherche, plus récente, a obtenu des
-  résultats plus prometteurs, en utilisant une combinaison de réseaux neuronaux
-  convolutionnels, et de réseaux neuronaux récurrents. En combinant ces deux
-  méthodes, il a été possible de considérer non seulement une image et ses FACS,
-  mais aussi d’analyser les images préalables de la séquence considérée, et
-  d’obtenir une meilleure précision des résultats. Cela permettant ainsi
-  d’atteindre un échelonnement allant de « absence de douleur « (« no pain ») à
-  « forte douleur » ( strong pain ») en passant par « faible douleur » (« weak
-  pain »), cequi a constitué une amélioration significative. 
+Une autre recherche  menée sur le même  sujet avec les mêmes  données, est celle
+qui a été menée à l’Université d’Aalborg, Danemark cite:bellantonio2016spatio.
+ Cette  recherche, plus récente,  a obtenu des  résultats  plus  prometteurs,
+en  utilisant  une  combinaison  de  réseaux neuronaux convolutionnels, et de
+réseaux neuronaux récurrents.  En combinant ces deux méthodes, il  a été
+possible de  considérer non seulement une  image et ses FACS, mais aussi
+d’analyser les images  préalables de la séquence considérée, et d’obtenir  une
+meilleure  précision  des  résultats. 
 
-  Le point commun de ces recherche est le fait qu’elles utilisent la même base de
-  données pour l’apprentissage et cela ne permet pas de fourni une précision
-  suffisante pour constituer un outil vraiment fiable en adéquation des
-  obligations légales cliniques. De plus, ces recherches se fondent uniquement sur
-  les expressions faciales, et ne prennent pas en considération d’autres facteurs
-  comme le ton de la voix, et la sémantique utilisée dans le dialogue.  Ceci afin
-  d’autoriser une analyse de la composante émotionnelle, laquelle est un facteur
-  important lorsqu’il s’agit de mesurer convenablement le niveau de douleur du
-  patient  cite:hale1997emotional.   
+Cela  permettant  ainsi d’atteindre un échelonnement allant de « absence de
+douleur « (« no pain ») à « forte douleur » ( « strong pain ») en  passant par «
+faible douleur » (« weak pain »), ce qui a constitué une première amélioration.
 
 
-** Methodological approach
+Le point commun de ces recherches est le fait qu’elles utilisent la même base de
+données pour l’apprentissage et cela ne permet pas de fournir une précision
+suffisante pour constituer un outil vraiment fiable en adéquation des
+obligations légales cliniques. De plus, ces recherches se fondent uniquement sur
+les expressions faciales, et ne prennent pas en considération d’autres facteurs
+comme le ton de la voix, et la sémantique utilisée dans le dialogue. Ces
+facteurs permettent pourtant une analyse de la composante émotionnelle, un facteur
+important lorsqu’il s’agit de mesurer convenablement le niveau de douleur du
+patient cite:hale1997emotional.   
+
+** Approche
    
-   Cette thèse propose une nouvelle approche du problème avec l’utilisation d’une
-   nouvelle base de données générée grâce à la contribution de volontaires
-   souffrant de douleurs chroniques (réglementation CNIL / données de santé
-   respectées). Même si une nouvelle base de données constitue un bon point de
-   départ, l’apprentissage d’un modèle de deep learning peut exiger d’importantes
-   quantités de données. C’est pourquoi il a été imaginé de compter sur la
-   contribution des praticiens, lesquels ont une longue expérience et une bonne
-   connaissance du problème, et ne devraient pas être exclus de l’approche
-   proposée. 
+Face aux limitations présentées par les recherches précédemment menées, cette
+thèse propose une approche originale du problème, avec notamment l’utilisation
+d’une nouvelle base de données, générée grâce à la contribution de volontaires
+souffrant de douleurs chroniques (tout en respectant la réglementation CNIL
+ainsi que celles concernant les données de santé) et qui servira à une
+application utilisant le /Deep Learning/.  
 
-   En effet, un praticien utilise autre chose qu’une simple image pour mesurer la
-   douleur. Il prend en considération de nombreux autres facteurs. C’est pourquoi
-   le projet propose d’utiliser l’expérience des praticiens pour compenser le
-   faible volume de données d’entraînement, ce qui pourrait se comparer au
-   fonctionnement des systèmes experts cite:giarratano1998expert. 
+Lucine a bien perçu la nécessité, en première instance, de générer une base de
+données originale et adéquate, et prépare actuellement sa constitution. Il
+s’agira de collecter un certain nombre de vidéos illustrant des situations où
+des personnes sont en souffrance, afin de pouvoir constituer un ensemble de
+données significatives, pouvant permettre d’extraire des éléments sémantiques
+pertinents d’expression de la douleur. Ainsi, les données disponibles pourront
+servir de matériau pour une application de /Deep Learning/, qui permettra de bien
+connaître les paramètres d’une personne en situation de douleur chronique, de
+diagnostiquer avec précision le niveau de douleur ressentie, et d’en optimiser
+la prise en charge.
 
-   Cependant, il n’est pas encore clair à ce jour quelle sera la manière dont il
-   sera possible de concilier le deep learning et les systèmes experts. Le but de
-   cette thèse sera l’exploration des moyens d’y parvenir. 
+Cependant, même si une nouvelle base de données constitue un bon point de
+départ, l’apprentissage d’un modèle de /Deep Learning/, pour être efficace,
+devrait reposer sur une collecte de données quantitativement très importante. Et
+comme il ne sera matériellement pas possible de récolter autant de données que
+nous en aurions besoin, nous nous proposons d’utiliser une méthode
+complémentaire qui devrait permettre de circonvenir les contraintes
+quantitatives de la base de données envisagée. L’idée consiste à compenser
+l’insuffisance en volume de l’enquête en utilisant l’expertise des acteurs de
+terrain comme les médecins et les spécialistes de la douleur, car ils ont une
+longue expérience et une bonne connaissance du problème, et ne devraient pas
+être exclus de l’approche proposée.  
 
-* Objectives
+En effet, un praticien utilise autre chose qu’une simple image pour mesurer la
+douleur. Il prend en considération de nombreux autres facteurs. Le projet
+propose donc d’utiliser cette expérience pour compenser le faible volume de
+données d’entraînement, ce qui pourrait se comparer au fonctionnement des
+systèmes experts cite:giarratano1998expert.   
+
+Afin de réaliser notre objectif , nous allons donc développer des méthodes
+combinant les mécanismes du /Deep Learning/  avec les techniques des systèmes
+experts. Nous pensons définir un ensemble de règles de type "if-then-else" sur
+la base de la façon dont fonctionnent les experts humains, et entraîner des
+/Deep Learning/ à prendre des décisions à chaque nœud de l’arbre de décisions.
+
+
+* Objectifs de la thèse
   
-  Comme les données sur ce sujet sont plutôt limitées, l’un des principaux
-  objectifs de cette thèse sera d’entraîner des systèmes de deep learning à être
-  capables de mesurer de la façon la plus précise possible le niveau de douleur
-  sur une vidéo, en utilisant des données réduites grâce à un coeur de facteurs de
-  décision importé, élaborés par des experts qui ont déjà une connaissance de la
-  mesure de la douleur.  
-  Il s’agira ainsi de rendre le processus d’apprentissage moins dépendant de la
-  grande quantité de données à analyser, même si on prendra garde de ne pas
-  sacrifier les capacités de généralisation du modèle.  
+Comme les données sur ce sujet sont plutôt limitées, l’un des principaux
+objectifs de cette thèse sera d’entraîner des systèmes de /Deep Learning/ à être
+capables de mesurer de la façon la plus précise possible le niveau de douleur
+à partir d'une vidéo, en utilisant des données réduites grâce à un cœur de facteurs de
+décision importé, élaborés par des experts qui ont déjà une connaissance de la
+mesure de la douleur.  
+
+Il s’agira ainsi de rendre le processus d’apprentissage moins dépendant de la
+grande quantité de données à analyser, même si on prendra garde de ne pas
+sacrifier les capacités de généralisation du modèle.  
 
 
-** Scientific and technological challenges
+** Défis scientifiques et technologiques
 
-   Les défis scientifiques à explorer dans le cadre de cette thèse sont les suivants :
 
-   - proposer un modèle capable de fournir efficacement une mesure de la douleur
-   - identifier les principaux points de décision qui peuvent être importés sur
-     la base des connaissances des experts, et qui peuvent être utilisés pour
-     améliorer les modèles d’apprentissage.
+   Les défis scientifiques que nous explorerons durant cette thèse sont:
+- proposer un modèle capable de fournir efficacement une mesure de la douleur.
+- identifier les principaux points de décision qui peuvent être importés sur la
+  base des connaissances des experts, et qui peuvent être utilisés pour
+  améliorer les modèles d’apprentissage. 
      
-* Organization
+* Organisation
   Cette thèse se déroulera sur une période de 36 mois et pendant toute cette
   durée, le temps de travail se répartira entre le laboratoire hôte (le LABRI,
   Université de Bordeaux), et la compagnie (Lucine) Planning
 ** Planning
-   - T0 + 6m:
-   - T0 + 12m:
-   - T0 + 18m:
-   - T0 + 24m:
-   - T0 + 36m: Writing of thesis and defense
-
+- *M1 - M6 :* Discussion avec les experts humains pour créer un ensemble de règles et un système expert. Identification des conditions pour ces règles.
+- *M7 - M12 :* Collecte des données permettant d’entrainer et d’évaluer les Deep Networks testant les conditions des règles du système expert.
+- *M13 - M18 :* Entrainements et évaluations des Deep Networks à partir des données col- lectées. Premières publications (dans les domaines de l’Intelligence Articielle et médical).
+- *M19 - M24 :* Seconde itération. Nouvelles captures de données selon l’experience acquise lors de la première itération.
+- *M25 - M30 :* Nouveaux entrainements et évaluations des Deep Networks. Nouvelles pub- lications.
+- *M31 - M36 :* Rédaction et défense de la thèse.
 
 
 bibliographystyle:unsrt
 bibliography:repport.bib
+
+
+
+# Local Variables:
+# coding: latin-1
+# org-src-preserve-indentation: true
+# tab-width: 4
+# End:
