--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
-% Created 2017-10-20 Fri 14:04
+% Created 2017-11-21 Tue 22:36
 % Intended LaTeX compiler: pdflatex
-\documentclass[11pt]{article}
+\documentclass[french]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
@@ -14,114 +14,90 @@
 \usepackage{amssymb}
 \usepackage{capt-of}
 \usepackage{hyperref}
+\usepackage{babel}
 \usepackage{minted}
-\usepackage{xcolor}
-
-\setlength{\oddsidemargin}{0.0in}
-\setlength{\topmargin}{-0.125in}
-\setlength{\textwidth}{6.25in}
-\setlength{\textheight}{8.75in}
-\parskip 5pt plus 3pt minus 2pt
-
-
 \date{}
 \title{\emph{Integrating Deep Learning in Expert Systems\\ for Medical Diagnosis}}
-\author{Willian Van der Valem Paiva}
 \hypersetup{
  pdfauthor={Willian Ver Valen Paiva},
- pdftitle={to be defined},
+ pdftitle={\emph{Integrating Deep Learning in Expert Systems\\ for Medical Diagnosis}},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 27.0.50 (Org mode 9.1.1)}, 
- pdflang={English}}
+ pdfcreator={Emacs 27.0.50 (Org mode 9.1.2)}, 
+ pdflang={Frenchb}}
 \begin{document}
 
 \maketitle
 
-\definecolor{ForestGreen}{rgb}{0.0, 0.5, 0.0}
-\newcommand{\vincent}[1]{{\color{ForestGreen}#1}}
-\newcommand{\vincentrmk}[1]{{\color{ForestGreen}\bf #1}}
+\section{Context}
+\label{sec:orga8bb14f}
 
-
-\section{Contexte}
-\label{sec:orgf816e45}
-
-\vincentrmk{mention Lucine early on}
-
-\vincentrmk{Discuss Watson}
-
-Le début  du XXIème  siècle a vu  une augmentation  spectaculaire d’applications
-informatiques apportant  une assistance  à de  nombreuses activités  humaines, y
-compris  pour  le  secteur  de  la médecine.  L’utilisation  de  la  technologie
-appliquée à la santé  est devenue un des points d’intérêt  de notre société, par
-exemple  pour l’emploi  des robots  d'assistances  en chirurgie,  la mesure  des
+Le début du XXIème siècle a vu une augmentation spectaculaire d’applications
+informatiques apportant une assistance à de nombreuses activités humaines, y
+compris pour le secteur de la médecine. L’utilisation de la technologie
+appliquée à la santé est devenue un des points d’intérêt de notre société, par
+exemple pour l’emploi des robots d’assistances en chirurgie, la mesure des
 données physiologiques comme le taux de sucre dans le sang pour les diabétiques,
-ou le dossier médical partagé.
+ou le dossier médical partagé.  
 
-%% \begin{itemize}
-%% \item l’emploi des robots d'assistances en chirurgie~;
-%% \item la mesure des données physiologiques comme le taux de sucre dans le sang pour les diabétiques~;
-%% \item les \emph{serious games} pour réapprendre à marcher~;
-%% \item le dossier médical partagé.
-%% \end{itemize}
+L’objectif principal de ce projet de recherche  s’appuie sur la start up Lucine,
+créée pour apporter des solutions innovantes pour les personnes qui, comme sa
+fondatrice, souffrent de douleur chronique, ceci afin d’en diminuer l’impact sur
+la vie quotidienne et d’en assurer une prise en charge optimisée.  L’idée
+consiste à réaliser une application destinée à un usage personnalisé, permettant
+de pouvoir mesurer automatiquement les niveaux de douleur ressentis par les
+détenteurs de l’application envisagée. Cette solution pourra aider les médecins
+à fournir un traitement adapté aux patients concernés.  
 
-%% Ces innovations qui parsèment le champ de santé émergent dans un domaine
-%% important qui est celui de la gestion de la douleur. 
-
-L’objectif  principal de  ce  projet  de recherche  consiste  à pouvoir  mesurer
-automatiquement  les  niveaux  de  douleur.  Cette
-solution   pourra  aider  les médecins  à fournir  un  traitement adapté  aux
-patients affectés de douleurs chroniques. La  mesure de la douleur n’est pas une
-tâche facile et constitue depuis longtemps un défi, même pour des professionnels
-de santé  avertis. De nombreuses échelles  et méthodes de mesure  ont été créées
-pour             répondre à            une             telle             question
+La mesure de la douleur n’est pas une tâche facile et constitue depuis longtemps
+un défi, même pour des professionnels de santé avertis. De nombreuses échelles
+et méthodes de mesure ont été créées pour répondre à une telle question
 \cite{wong1996wong,mccaffery1999pain,portenoy1996visual,melzack1975mcgill,galer1997development,gracely1988descriptor}
-mais leur  efficacité reste limitée.  Jusqu’à  ce jour, il est  encore difficile
-d’arriver à une mesure précise de la douleur.
+mais leur efficacité reste limitée. Jusqu’à ce jour, il est encore
+difficile d’arriver à une mesure précise de la douleur.  
 
-La raison principale pour cela est  que la douleur est une sensation subjective,
-et la  mesure la plus  utilisée est l’auto-évaluation  par le patient.   Même si
-cette  mesure donne  des  résultats relativement  acceptables,  elle est  encore
-insuffisante sur  certains aspects, notamment quand  on en vient à  la notion de
-douleur simulée~\cite{gwen2007faces}, ou, plus  couramment, lorsque le patient a
+La raison principale pour cela est que la douleur est une sensation subjective,
+et la mesure la plus utilisée est l’auto-évaluation par le patient. Même si
+cette mesure donne des résultats relativement acceptables, elle est encore
+insuffisante sur certains aspects, notamment quand on en vient à la notion de
+douleur simulée \cite{gwen2007faces}, ou, plus  couramment, lorsque le patient a
 des difficultés à communiquer, comme  lorsqu’il s’agit d’enfants ou de personnes
-âgées~\cite{lucey2011automatically}.
+âgées \cite{lucey2011automatically}.
 
 La création  d’une méthode capable  de fournir une  mesure précise du  niveau de
 douleur ressentie par le patient pourrait  aider le système actuel de diagnostic
 à dépasser  cette barrière  difficile qu'est  la subjectivité  de la  douleur du
 patient.
 
-
-\subsection{\'Etat de l'art}
-\label{sec:org08f9dfb}
-
-Plusieurs travaux  ont d\'ej\`a essayé d’obtenir  un système de détection  de la
+\subsection{État de l’art}
+\label{sec:org8119c98}
+Plusieurs travaux  ont déjà essayé d’obtenir  un système de détection  de la
 douleur par  l’analyse des  données biométriques, telles  ques les  pupilles, la
 voix, l'ECG etc.). La reconnaissance faciale est l'un des systèmes qui se révèle
 le  plus   prometteur  pour  mesurer   et  analyser  la  douleur   d'un  patient
 efficacement.  Afin d’atteindre cet objectif, plusieurs systèmes ont utilisé des
-collections  de données  affectées  de codes  FACS~(\emph{Facial Action  Coding
-  System})~\cite{lucey2011painful}.
+collections  de données  affectées  de codes  FACS (\emph{Facial Action  Coding System}) \cite{lucey2011painful}.
 
 Le  principal  travail  réalisé sur  ce  sujet  a  été  la recherche  menée  par
-l’Université de Pittsburgh "\emph{Automatically  Detecting Pain in Video Through
-  Facial  Action Units}"  \cite{lucey2011automatically}.  Cette  recherche s’est
-basée  principalement sur  l’utilisation des  FACS  pour détecter  la douleur  à
-partir d'images. Les résultats obtenus sont restés limités, puisqu'ils ont porté
-sur la présence ou l’absence de douleur (« pain or no pain »).
+l’Université de Pittsburgh "\emph{Automatically  Detecting Pain in Video Through Facial  Action Units}"  \cite{lucey2011automatically}.
+Cette  recherche s’est basée  principalement sur  l’utilisation des  FACS  pour
+détecter  la douleur  à partir d'images. Les résultats obtenus sont restés
+limités, puisqu'ils ont porté sur la présence ou l’absence de douleur (« pain or
+no pain »). 
 
 Une autre recherche  menée sur le même  sujet avec les mêmes  données, est celle
-qui        a       été        menée        à       l’Université        d’Aalborg,
-Danemark~\cite{bellantonio2016spatio}. Cette  recherche, plus récente,  a obtenu
-des  résultats  plus  prometteurs,  en  utilisant  une  combinaison  de  réseaux
-neuronaux convolutionnels, et de réseaux neuronaux récurrents.  En combinant ces
-deux méthodes, il  a été possible de  considérer non seulement une  image et ses
-FACS, mais aussi d’analyser les images  préalables de la séquence considérée, et
-d’obtenir  une   meilleure  précision  des  résultats.   Cela  permettant  ainsi
-d’atteindre un échelonnement allant de « absence de  douleur « (« no pain ») à «
-forte douleur » ( « strong pain ») en  passant par « faible douleur » (« weak pain
-»), ce qui a constitué une première amélioration.
+qui a été menée à l’Université d’Aalborg, Danemark \cite{bellantonio2016spatio}.
+ Cette  recherche, plus récente,  a obtenu des  résultats  plus  prometteurs,
+en  utilisant  une  combinaison  de  réseaux neuronaux convolutionnels, et de
+réseaux neuronaux récurrents.  En combinant ces deux méthodes, il  a été
+possible de  considérer non seulement une  image et ses FACS, mais aussi
+d’analyser les images  préalables de la séquence considérée, et d’obtenir  une
+meilleure  précision  des  résultats. 
+
+Cela  permettant  ainsi d’atteindre un échelonnement allant de « absence de
+douleur « (« no pain ») à « forte douleur » ( « strong pain ») en  passant par «
+faible douleur » (« weak pain »), ce qui a constitué une première amélioration.
+
 
 Le point commun de ces recherches est le fait qu’elles utilisent la même base de
 données pour l’apprentissage et cela ne permet pas de fournir une précision
@@ -131,52 +107,61 @@ les expressions faciales, et ne prennent pas en considération d’autres facteu
 comme le ton de la voix, et la sémantique utilisée dans le dialogue. Ces
 facteurs permettent pourtant une analyse de la composante émotionnelle, un facteur
 important lorsqu’il s’agit de mesurer convenablement le niveau de douleur du
-patient~\cite{hale1997emotional}.   
-
+patient \cite{hale1997emotional}.   
 
 \subsection{Approche}
-\label{sec:org97cce26}
+\label{sec:orgcad02fb}
 
-\vincentrmk{
-  L'approche devrait etre mieux précisée : 1) pour compenser
-  l'absence de  donnees, Lucine  a créé/crée une  base de  donnees et
-  details sur  la base  de donnees;  2) on  souhaite utiliser  le deep
-  learning pour predire la douleur; 3) le deep learning a sans doute
-  besoin de plus de donnees qu’on peut en creer; 4) l'idee de depart
-  de la these est d'integrer la connaissance des experts humains sous
-  forme de systeme expert; 5) nous allons donc developper des methodes
-pour combiner deep learning et systeme expert: 1) define a set of if-then-else rules from the human
-  experts, 2) train deep networks for the conditions}
+Face aux limitations présentées par les recherches précédemment menées, cette
+thèse propose une approche originale du problème, avec notamment l’utilisation
+d’une nouvelle base de données, générée grâce à la contribution de volontaires
+souffrant de douleurs chroniques (tout en respectant la réglementation CNIL
+ainsi que celles concernant les données de santé) et qui servira à une
+application utilisant le \emph{Deep Learning}.  
 
-Cette thèse propose une nouvelle approche du problème avec l’utilisation d’une
-nouvelle base de données générée grâce à la contribution de volontaires
-souffrant de douleurs chroniques (réglementation CNIL / données de santé
-respectées).
+Lucine a bien perçu la nécessité, en première instance, de générer une base de
+données originale et adéquate, et prépare actuellement sa constitution. Il
+s’agira de collecter un certain nombre de vidéos illustrant des situations où
+des personnes sont en souffrance, afin de pouvoir constituer un ensemble de
+données significatives, pouvant permettre d’extraire des éléments sémantiques
+pertinents d’expression de la douleur. Ainsi, les données disponibles pourront
+servir de matériau pour une application de \emph{Deep Learning}, qui permettra de bien
+connaître les paramètres d’une personne en situation de douleur chronique, de
+diagnostiquer avec précision le niveau de douleur ressentie, et d’en optimiser
+la prise en charge.
 
-Mais si une nouvelle base de données constitue un bon point de
-départ, l’apprentissage d’un modèle de \emph{Deep Learning} peut exiger d’importantes
-quantités de données. C’est pourquoi nous proposons d'intégrer l'expérience
-des praticiens. 
+Cependant, même si une nouvelle base de données constitue un bon point de
+départ, l’apprentissage d’un modèle de \emph{Deep Learning}, pour être efficace,
+devrait reposer sur une collecte de données quantitativement très importante. Et
+comme il ne sera matériellement pas possible de récolter autant de données que
+nous en aurions besoin, nous nous proposons d’utiliser une méthode
+complémentaire qui devrait permettre de circonvenir les contraintes
+quantitatives de la base de données envisagée. L’idée consiste à compenser
+l’insuffisance en volume de l’enquête en utilisant l’expertise des acteurs de
+terrain comme les médecins et les spécialistes de la douleur, car ils ont une
+longue expérience et une bonne connaissance du problème, et ne devraient pas
+être exclus de l’approche proposée.  
 
-En effet, un praticien n'utilise pas que son sens de la vue pour mesurer la
-douleur. Il prend en considération de nombreux autres facteurs. C’est pourquoi
-le projet propose d’utiliser l’expérience des praticiens pour compenser le
-faible volume de données d’entraînement, ce qui pourrait se comparer au
-fonctionnement des systèmes experts \cite{giarratano1998expert}. 
+En effet, un praticien utilise autre chose qu’une simple image pour mesurer la
+douleur. Il prend en considération de nombreux autres facteurs. Le projet
+propose donc d’utiliser cette expérience pour compenser le faible volume de
+données d’entraînement, ce qui pourrait se comparer au fonctionnement des
+systèmes experts \cite{giarratano1998expert}.  
 
-Cependant, il n’est pas encore clair à ce jour quelle sera la manière dont il
-sera possible de concilier le \emph{Deep Learning} et les systèmes experts. Le but de
-cette thèse sera l’exploration des moyens d’y parvenir. 
+Afin de réaliser notre objectif , nous allons donc développer des méthodes
+combinant les mécanismes du \emph{Deep Learning} avec les techniques des systèmes
+experts. Nous pensons définir un ensemble de règles de type "if-then-else" sur
+la base de la façon dont fonctionnent les experts humains, et entraîner des
+\emph{Deep Learning} à prendre des décisions à chaque nœud de l’arbre de décisions.
+
 
 \section{Objectifs de la thèse}
-\label{sec:orgf1f9281}
-
-\vincentrmk{}
+\label{sec:orgf2f9c8d}
 
 Comme les données sur ce sujet sont plutôt limitées, l’un des principaux
 objectifs de cette thèse sera d’entraîner des systèmes de \emph{Deep Learning} à être
 capables de mesurer de la façon la plus précise possible le niveau de douleur
-à partir d'une vidéo, en utilisant des données réduites grâce à un c\oe{}ur de facteurs de
+à partir d'une vidéo, en utilisant des données réduites grâce à un cœur de facteurs de
 décision importé, élaborés par des experts qui ont déjà une connaissance de la
 mesure de la douleur.  
 
@@ -186,43 +171,32 @@ sacrifier les capacités de généralisation du modèle.
 
 
 \subsection{Défis scientifiques et technologiques}
-\label{sec:org70ad40f}
+\label{sec:orgb1aac1c}
 
-Les défis scientifiques que nous explorerons durant cette thèse sont~:
+
+Les défis scientifiques que nous explorerons durant cette thèse sont:
 \begin{itemize}
-\item proposer un modèle capable de fournir efficacement une mesure de
-  la douleur~;
-\item identifier les principaux points de décision qui peuvent être importés sur
-la base des connaissances des experts, et qui peuvent être utilisés pour
+\item proposer un modèle capable de fournir efficacement une mesure de la douleur.
+\item identifier les principaux points de décision qui peuvent être importés sur la
+base des connaissances des experts, et qui peuvent être utilisés pour
 améliorer les modèles d’apprentissage.
 \end{itemize}
 
-
 \section{Organisation}
-\label{sec:org1cc9eab}
+\label{sec:org66b1492}
 Cette thèse se déroulera sur une période de 36 mois et pendant toute cette
 durée, le temps de travail se répartira entre le laboratoire hôte (le LABRI,
-Université de Bordeaux), et la compagnie (Lucine).
-
+Université de Bordeaux), et la compagnie (Lucine) Planning
 \subsection{Planning}
-\label{sec:org8a30be3}
+\label{sec:org2dc06f3}
 \begin{itemize}
-\item M1 - M6~: Discussion avec les experts humains pour cr\'eer un
-  ensemble de r\`egles et un syst\`eme expert. Identification des
-  conditions pour ces r\`egles.
-\item M7 - M12~: Collecte des donn\'ees permettant d'entrainer et
-  d'\'evaluer les \emph{Deep Networks} testant les conditions des
-  r\`egles du syst\`eme expert. 
-\item M13 - M18~: Entrainements et \'evaluations des \emph{Deep
-  Networks} \`a partir des donn\'ees collect\'ees. Premi\`eres
-  publications~(dans les domaines de l'Intelligence Articielle et m\'edical).
-\item M19 - M24~: Seconde it\'eration. Nouvelles captures de donn\'ees
-  selon l'experience acquise lors de la premi\`ere it\'eration.
-\item M25 - M30~: Nouveaux entrainements et \'evaluations  des \emph{Deep
-  Networks}. Nouvelles publications. 
-\item M31 - M36: R\'edaction et d\'efense de la th\`ese.
+\item \textbf{M1 - M6 :} Discussion avec les experts humains pour créer un ensemble de règles et un système expert. Identification des conditions pour ces règles.
+\item \textbf{M7 - M12 :} Collecte des données permettant d’entrainer et d’évaluer les Deep Networks testant les conditions des règles du système expert.
+\item \textbf{M13 - M18 :} Entrainements et évaluations des Deep Networks à partir des données col- lectées. Premières publications (dans les domaines de l’Intelligence Articielle et médical).
+\item \textbf{M19 - M24 :} Seconde itération. Nouvelles captures de données selon l’experience acquise lors de la première itération.
+\item \textbf{M25 - M30 :} Nouveaux entrainements et évaluations des Deep Networks. Nouvelles pub- lications.
+\item \textbf{M31 - M36 :} Rédaction et défense de la thèse.
 \end{itemize}
-
 
 
 \bibliographystyle{unsrt}
